fix: sidebar size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,6 @@
 		width: 100%;
 		height: auto;
 		margin-bottom: 30px;
-		min-height: 100vh;
 	}
 
 	.container {
